--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.2.0"
+    "file-loader": "^6.0.0",
+    "react-router-dom": "^5.2.0",
+    "url-loader": "^4.1.0"
   }
 }
